src/test/ui/issues/issue-38821.stderr
error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:29:1
   |
LL | / pub enum ColumnInsertValue<Col, Expr>
LL | |
LL | | where
LL | |     Col: Column,
...  |
LL | |     Default(Col),
LL | | }
   | |_^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`

error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:23:23
   |
LL | #[derive(Debug, Copy, Clone)]
   |                       ^^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:23:17
   |
LL | #[derive(Debug, Copy, Clone)]
   |                 ^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:23:10
   |
LL | #[derive(Debug, Copy, Clone)]
   |          ^^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:23:23
   |
LL | #[derive(Debug, Copy, Clone)]
   |                       ^^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/issue-38821.rs:23:10
   |
LL | #[derive(Debug, Copy, Clone)]
   |          ^^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
